# Infinity-Talker

./: .gitignore  LICENSE.md  pyproject.toml
docs/core/event_bus/: event_bus.md
docs/core/event_bus/templates/: expect.md  pipe.md  request.md
src/: main.py
src/components/config/: loader.py  settings.py
src/components/context/: conversation.py
src/components/context/database/: aiosqlite.py
src/components/llm/: exceptions.py  handlers.py  messages_model.py
src/components/llm/llm_clients/: __init__.py  open_ai_client.py
src/components/simple_tui/: ui.py
src/componets/config/: __init__.py
src/core/event_bus/: event_bus.py
src/core/event_bus/templates/: expect.py  pipe.py  register.py  request.py  service_warpper.py  service_wrapper.py
src/infinity_talker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/core/event_bus/: event_bus_test.py
tests/core/event_bus/templates/: expect_test.py  pipe_test.py  request_test.py
tools/code_analyzer/: code_analyzer.py  tool_meta_info.json
tools/doc_generator/: doc_generator.py  tool_meta_info.json
tools/get_weather/: get_weather.py  tool_meta_info.json
tools/get_webpage/: get_webpage.py  tool_meta_info.json
tools/get_wiki/: _tool_meta_info.json  get_wiki.py
tools/ip_location/: ip_location.py  tool_meta_info.json
tools/search_webpage/: search_webpage.py  tool_meta_info.json
tools/show_tree/: show_tree.py  tool_meta_info.json
tools/wiki_search/: tool_meta_info.json  wiki_search.py
